Sun May 18 04:55:45 2003  Tim Janik  <timj@gtk.org>

	* bseprocedure.proc: added bse-string-extract-number() to deal with
	command line argumens and midi notes.

	* gslcommon.[hc]: added simple progress api for comand line apps.

	* gsldatahandle-vorbis.[hc]: changed API, now a data handle relates
	to a logical ogg/vorbis stream specified by either the logical stream
	number or a zero-offset relative file section.

	* gsldatautils.h: reduced peek buffer size from 8192 to 2048 for
	better cache utilization.

	* gslloader-gslwave.c: support inlined (binary appendix) raw sample data
	via "rawlink" key word, and added support for inlined ogg/vorbis sample
	data via "ogglink". adjust binary appendix syntax parsing.
	
	* gslwave.header: minor description fixes, describe ogglink and rawlink.

	* gslvorbis-enc.[hc]: Ogg/Vorbis encoder API front end.

	* gslvorbis-cutter.[hc]: Ogg/Vorbis stream cutting implementation
	currently supports tail cutting at sample, packet and page boundaries.

Sun May 11 18:45:40 2003  Tim Janik  <timj@gtk.org>

	* gsldefs.h:
	* bseenums.[hc]:
	* gslcommon.[hc]: added GSL_ERROR_IS_DIR and BSE_ERROR_FILE_IS_DIR
	errors. return GSL_ERROR_IS_DIR for EISDIR from gsl_error_from_errno().
	special case GSL_ERROR_IS_DIR in gsl_check_file().

Sun May 11 14:22:12 2003  Tim Janik  <timj@gtk.org>

	* bseitem.c: removed ::seqid-changed signal, added readable property
	::seqid that also emits change notification.

Tue May  6 04:17:19 2003  Tim Janik  <timj@gtk.org>

	* bsemain.c (bse_init_intern): 
	(bse_init_async): don't override previously set prgnames.

	* bserecords.sfidl: added SampleFileInfo record.

	* bsewaverepo.proc: provide bse-sample-file-info() to retrive
	info about a sample file prior to loading.

Mon May  5 03:52:24 2003  Tim Janik  <timj@gtk.org>

	* bseglue.c (bglue_proxy_request_notify): canonify signal names before
	attempting matches, fixes remaining "spurious signal" warnings. minor
	optimizations.
